back/log/error.log
2023-04-27T09:26:53.300Z-error- uncaughtException: Unexpected token '*'
D:\learning\blog\back\common\corsRequest.js:4
		res.header("Access-Control-Allow-Origin", *);
		                                          ^

SyntaxError: Unexpected token '*'
    at wrapSafe (internal/modules/cjs/loader.js:1001:16)
    at Module._compile (internal/modules/cjs/loader.js:1049:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
    at Module.load (internal/modules/cjs/loader.js:950:32)
    at Function.Module._load (internal/modules/cjs/loader.js:790:12)
    at Module.require (internal/modules/cjs/loader.js:974:19)
    at require (internal/modules/cjs/helpers.js:101:18)
    at Object.<anonymous> (D:\learning\blog\back\app.js:11:19)
    at Module._compile (internal/modules/cjs/loader.js:1085:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
